--- a/pixeebot.yaml
+++ b/pixeebot.yaml
@@ -1,2 +1,26 @@
 ai:
   allow_llm_access: true
+  
+on:
+  pull_request:
+    types: [opened, reopened, ready_for_review]
+
+jobs:
+  auto-assign:
+    runs-on: ubuntu-latest
+    if: github.actor == 'pixeebot[bot]'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Assign PR to Collaborators
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const collaborators = ['octocat']; // Replace with actual GitHub usernames
+            github.rest.issues.addAssignees({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              assignees: collaborators
+            })
